--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>Anuroop Farkya</title>
+    <title>Daksh Pathak</title>
     <link rel="manifest" href="manifest.json">
     <style>
         body {
